Disabled Swedish FAQ

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -80,7 +80,7 @@ if(typeof(legacyIE)==='undefined'){
       <li{% if page.id == 'innovation' %} class="active"{% endif %}><a href="/{{ page.lang }}/{% translate innovation url %}">{% translate menu-innovation layout %}</a></li>
       <li{% if page.id == 'support-bitcoin' %} class="active"{% endif %}><a href="/{{ page.lang }}/{% translate support-bitcoin url %}">{% translate menu-support-bitcoin layout %}</a></li>
       {% case page.lang %}
-      {% when 'id' %}
+      {% when 'id' or 'sv' %}
       {% else %}
       <li{% if page.id == 'faq' %} class="active"{% endif %}><a href="/{{ page.lang }}/{% translate faq url %}">{% translate menu-faq layout %}</a></li>
       {% endcase %}
